# parachain-template

./: Cargo.toml  README.md  chain_spec.json
.github/workflows/: release.yml
docs/: Substrate 企业任务平台.md  Substrate框架介绍与示例.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AccountSelect.tsx  StatusBadge.tsx  TxPanel.tsx
frontend/src/lib/: chain.ts  devAccounts.ts  polkadot.ts
frontend/src/pages/: Certificates.tsx  Committee.tsx  Dashboard.tsx  Setup.tsx  Tasks.tsx
frontend/src/store/: chainStore.tsx
pallets/counter/: Cargo.toml
pallets/counter/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/task-rewards/: Cargo.toml
pallets/task-rewards/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/tasks/: Cargo.toml
pallets/tasks/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
