[package]
name = "pallet-task-rewards"
version = "0.1.0"
description = "A task rewards pallet"
edition = "2021"
license = "Unlicense"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

frame = { workspace = true, features = ["runtime"], default-features = false }

polkadot-sdk = { workspace = true, features = ["pallet-balances"], default-features = false }


[features]
default = ["std"]

std = [
    "codec/std",
    "scale-info/std",
    "frame/std",
    "polkadot-sdk/std",
]

runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
