[package]
name = "pallet-tasks"
version = "0.1.0"
description = "Enterprise task points pallet"
edition = "2021"
license = "MIT-0"
publish = false

[dependencies]
codec = { workspace = true, default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }

frame = { workspace = true, features = ["runtime"], default-features = false }

polkadot-sdk = { workspace = true, default-features = false, features = [
    "runtime",
] }

[dev-dependencies]
polkadot-sdk = { workspace = true, default-features = false, features = [
    "std",
    "runtime",
    "pallet-assets",
    "pallet-balances",
    "pallet-nfts",
    "pallet-scheduler",
] }


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame/std",
    "polkadot-sdk/std",
]
runtime-benchmarks = [
    "frame/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
